--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -17,10 +17,10 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Phone</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!isLoggedIn()">
           <a class="nav-link" routerLink="/sign-in" routerLinkActive="active" ariaCurrentWhenActive="page">Sign In</a>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" *ngIf="isLoggedIn()">
           <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">My Account</a>
           <div class="dropdown-menu position-absolute" aria-labelledby="dropdownId">
@@ -28,6 +28,7 @@
             <a class="dropdown-item" (click)="goToMyAccSettings()">Settings</a>
             <a class="dropdown-item" (click)="goToMyBookings()">My Bookings</a>
             <!-- <a class="dropdown-item" (click)="goToMyAccSettings">Saved</a> -->
+            <a class="dropdown-item" (click)="logout()">Logout</a>
           </div>
         </li>
         
