--- a/src/app/modules/my-bookings/my-bookings.component.html
+++ b/src/app/modules/my-bookings/my-bookings.component.html
@@ -8,10 +8,14 @@
                     <div class="col-md-4">
                         <div class="card mb-4">
                             <img src="https://via.placeholder.com/150.jpg" class="card-img-top" alt="Booking Image">
-                            <div class="card-body">
+                            <class="card-body">
                                 <h5 class="card-title">Vanavihari</h5>
+                                <hr>
+                                <p class="card-text">address here</p>
+                                <hr>
                                 <p class="card-text">VanaVihari promotes sustainable and community-based eco-tourism, fostering local empowerment and environmental conservation.<p>
                                 <p class="card-text"> It aims to enhance living standards for indigenous communities while providing nature enthusiasts with an immersive and environmentally conscious experience.</p>
+                                <hr>
                                 <a href="#" class="btn btn-primary">View Property</a>
                                 <a href="#" class="btn btn-danger">Cancel</a>
                             </div>
