--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -12,29 +12,75 @@
               <form #myForm="ngForm" [formGroup]="form" (ngSubmit)="onSubmit()">
                 <mat-form-field appearance="outline">
                   <mat-label>Full Name</mat-label>
-                  <input type="text" matInput required formControlName="full_name" name="Full_Name" ngModel placeholder="Enter Name">
+                  <input
+                    type="text"
+                    matInput
+                    required
+                    formControlName="full_name"
+                    name="Full_Name"
+                    ngModel
+                    placeholder="Enter Name"
+                  />
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Mobile no.</mat-label>
-                  <input type="tel" matInput required formControlName="mobile_number" name="Mobile_Number" ngModel placeholder="Enter 10 digit mobile no.">
+                  <input
+                    type="tel"
+                    matInput
+                    required
+                    formControlName="mobile_number"
+                    name="Mobile_Number"
+                    ngModel
+                    placeholder="Enter 10 digit mobile no."
+                  />
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Email</mat-label>
-                  <input type="email" matInput required formControlName="email_id" name="Email_Id" ngModel placeholder="abc@gmail.com">
+                  <input
+                    type="email"
+                    matInput
+                    required
+                    formControlName="email_id"
+                    name="Email_Id"
+                    ngModel
+                    placeholder="abc@gmail.com"
+                  />
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Password</mat-label>
-                  <input type="password" matInput name="Password" required formControlName="password" ngModel placeholder="Enter Password">
+                  <input
+                    type="password"
+                    matInput
+                    name="Password"
+                    required
+                    formControlName="password"
+                    ngModel
+                    placeholder="Enter Password"
+                  />
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Repeat Password</mat-label>
-                  <input type="password" matInput name="Repeat_Password" required formControlName="repeat_password" ngModel placeholder="Repeat Password">
+                  <input
+                    type="password"
+                    matInput
+                    name="Repeat_Password"
+                    required
+                    formControlName="repeat_password"
+                    ngModel
+                    placeholder="Repeat Password"
+                  />
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
                 </mat-form-field>
-                <mat-checkbox value="" color="primary" class="my-2">I agree to the terms and conditions</mat-checkbox>
+                <mat-checkbox
+                  (change)="toggleTermsModal($event.checked)"
+                  value=""
+                  color="primary"
+                  class="my-2"
+                  >I agree to the terms and conditions</mat-checkbox
+                >
                 <!-- <div class="d-flex align-items-center">
                         <span class="lgcaptcha-area" id="captcha"></span>
                         <a href="javascript:;" (click)="createCaptcha()" class="lgcaptcha-refresh" aria-label="refresh captcha">
@@ -52,14 +98,57 @@
                       <div *ngIf="validCaptchaError && !captchaError">{{'Please enter Valid captcha' | languageTranslatorImpure}}
                       </div> -->
                 <!-- </div> -->
-                
-                <button mat-raised-button color="primary" class="w-100 mt-1">Sign Up</button>
+
+                <!-- Terms and Conditions Modal -->
+                <div
+                  class="modal fade position-static"
+                  [ngClass]="{ show: showTermsModal }"
+                  tabindex="-1"
+                  role="dialog"
+                  style="display: block"
+                  aria-labelledby="modalTitleId"
+                  aria-hidden="true"
+                  data-bs-backdrop="false"
+                  data-bs-keyboard="false"
+                >
+                  <div
+                    class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
+                  >
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title">Terms and Conditions</h5>
+                      </div>
+                      <div class="modal-body">
+                        <!-- Your terms and conditions content here -->
+                        <p>
+                          Lorem ipsum dolor sit amet, consectetur adipiscing
+                          elit....
+                        </p>
+                      </div>
+                      <div class="modal-footer">
+                        <button
+                          type="button"
+                          class="btn btn-primary"
+                          (click)="agreeToTerms()"
+                        >
+                          Agree
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <button mat-raised-button color="primary" class="w-100 mt-1">
+                  Sign Up
+                </button>
 
                 <!-- <a (click)="register()">Register here</a> -->
               </form>
               <div class="d-flex justify-content-between mt-5">
                 <a class="text-danger">Reset fields</a>
-                <a class="text-info-emphasis" (click)="goToSignin()">Already have an account? Sign In</a>
+                <a class="text-info-emphasis" (click)="goToSignin()"
+                  >Already have an account? Sign In</a
+                >
               </div>
             </div>
           </div>
