--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -12,143 +12,46 @@
               <form #myForm="ngForm" [formGroup]="form" (ngSubmit)="onSubmit()">
                 <mat-form-field appearance="outline">
                   <mat-label>Full Name</mat-label>
-                  <input
-                    type="text"
-                    matInput
-                    required
-                    formControlName="full_name"
-                    name="Full_Name"
-                    ngModel
-                    placeholder="Enter Name"
-                  />
+                  <input type="text" matInput required formControlName="full_name" name="Full_Name" ngModel
+                    placeholder="Enter Name" />
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Mobile no.</mat-label>
-                  <input
-                    type="tel"
-                    matInput
-                    required
-                    formControlName="mobile_number"
-                    name="Mobile_Number"
-                    ngModel
-                    placeholder="Enter 10 digit mobile no."
-                  />
+                  <input type="tel" matInput required formControlName="mobile_number" name="Mobile_Number" ngModel
+                    placeholder="Enter 10 digit mobile no." />
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Email</mat-label>
-                  <input
-                    type="email"
-                    matInput
-                    required
-                    formControlName="email_id"
-                    name="Email_Id"
-                    ngModel
-                    placeholder="abc@gmail.com"
-                  />
+                  <input type="email" matInput required formControlName="email_id" name="Email_Id" ngModel
+                    placeholder="abc@gmail.com" />
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Password</mat-label>
-                  <input
-                    type="password"
-                    matInput
-                    name="Password"
-                    required
-                    formControlName="password"
-                    ngModel
-                    placeholder="Enter Password"
-                  />
+                  <input type="password" matInput name="Password" required formControlName="password" ngModel
+                    placeholder="Enter Password" />
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Repeat Password</mat-label>
-                  <input
-                    type="password"
-                    matInput
-                    name="Repeat_Password"
-                    required
-                    formControlName="repeat_password"
-                    ngModel
-                    placeholder="Repeat Password"
-                  />
+                  <input type="password" matInput name="Repeat_Password" required formControlName="repeat_password"
+                    ngModel placeholder="Repeat Password" />
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
                 </mat-form-field>
-                <mat-checkbox
-                  (change)="toggleTermsModal($event.checked)"
-                  value=""
-                  color="primary"
-                  class="my-2"
-                  >I agree to the terms and conditions</mat-checkbox
-                >
-                <!-- <div class="d-flex align-items-center">
-                        <span class="lgcaptcha-area" id="captcha"></span>
-                        <a href="javascript:;" (click)="createCaptcha()" class="lgcaptcha-refresh" aria-label="refresh captcha">
-                            <img class="icon" src="assets/images/icons/refresh.svg"></a>
-                    </div> -->
-                <!-- <div class="form-floating mb-3">
-                      <input type="text" class="form-control" id="floatingInput" formControlName="cpatchaTextBox" id="cpatchaTextBox"
-                      maxlength="6" placeholder="Enter Captcha as shown above">
-                      <label for="floatingInput">Captcha</label>
-                  </div> -->
-                <!-- <div class="error mt-2"> -->
-                <!-- <div *ngIf="(formGroup.controls['cpatchaTextBox'].touched && formGroup.get('cpatchaTextBox').hasError('required')) && !(validCaptchaError && !captchaError) ">
-                          {{ errors.captcharequired | languageTranslatorImpure}}
-                      </div>
-                      <div *ngIf="validCaptchaError && !captchaError">{{'Please enter Valid captcha' | languageTranslatorImpure}}
-                      </div> -->
-                <!-- </div> -->
-
+                <!-- <mat-checkbox (change)="toggleTermsModal($event.checked)" value="" color="primary" class="my-2">I agree
+                  to the terms and conditions</mat-checkbox> -->
                 <!-- Terms and Conditions Modal -->
-                <div
-                  class="modal fade position-static"
-                  [ngClass]="{ show: showTermsModal }"
-                  tabindex="-1"
-                  role="dialog"
-                  style="display: block"
-                  aria-labelledby="modalTitleId"
-                  aria-hidden="true"
-                  data-bs-backdrop="false"
-                  data-bs-keyboard="false"
-                >
-                  <div
-                    class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
-                  >
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title">Terms and Conditions</h5>
-                      </div>
-                      <div class="modal-body">
-                        <!-- Your terms and conditions content here -->
-                        <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing
-                          elit....
-                        </p>
-                      </div>
-                      <div class="modal-footer">
-                        <button
-                          type="button"
-                          class="btn btn-primary"
-                          (click)="agreeToTerms()"
-                        >
-                          Agree
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+
 
                 <button mat-raised-button color="primary" class="w-100 mt-1">
                   Sign Up
                 </button>
 
-                <!-- <a (click)="register()">Register here</a> -->
               </form>
               <div class="d-flex justify-content-between mt-5">
-                <a class="text-danger">Reset fields</a>
-                <a class="text-info-emphasis" (click)="goToSignin()"
-                  >Already have an account? Sign In</a
-                >
+                <!-- <a class="text-danger">Reset fields</a> -->
+                <a class="text-info-emphasis" (click)="goToSignin()">Already have an account? Sign In</a>
               </div>
             </div>
           </div>
@@ -164,3 +67,52 @@
   [modalBody]="modalBody"
   [modalButtonColor]="modalButtonColor">
 </app-confirmation-modal> -->
+
+<div class="modal fade position-static" [ngClass]="{ show: showTermsModal }" tabindex="-1" role="dialog"
+  style="display: block" aria-labelledby="modalTitleId" aria-hidden="true" data-bs-backdrop="false"
+  data-bs-keyboard="false">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Terms and Conditions</h5>
+      </div>
+      <div class="modal-body">
+        <!-- write terms and conditions in a list for signing up in a resort booking website -->
+        <p>By signing up on our resort booking website, you agree to comply with all the terms and conditions outlined
+          herein.</p>
+
+        <ol>
+          <li>You must be at least 18 years old to create an account on our platform.</li>
+          <li>You agree to provide accurate and up-to-date information during the registration process.</li>
+          <li>Your account credentials, including username and password, are confidential, and you are solely
+            responsible for maintaining their confidentiality.</li>
+          <li>Any activity conducted using your account is your responsibility, and you will be held liable for any
+            misuse or unauthorized access.</li>
+          <li>The resort booking website reserves the right to suspend or terminate your account at any time if it
+            suspects fraudulent activity or violation of these terms.</li>
+          <li>You agree not to use our platform for any unlawful or prohibited activities.</li>
+          <li>All bookings made through our website are subject to availability and confirmation by the resort.</li>
+          <li>Prices displayed on the website are subject to change without prior notice.</li>
+          <li>Payment for bookings must be made in accordance with the terms specified during the booking process.</li>
+          <li>Cancellation and refund policies vary depending on the resort and are subject to their terms and
+            conditions.</li>
+          <li>The resort booking website is not liable for any damages, losses, or inconveniences incurred during your
+            stay at the resort.</li>
+          <li>You agree to indemnify and hold harmless the resort booking website and its affiliates from any claims
+            arising out of your use of the platform.</li>
+          <li>We reserve the right to modify or update these terms and conditions at any time without prior notice.</li>
+          <li>By continuing to use our website after any modifications, you agree to be bound by the revised terms and
+            conditions.</li>
+        </ol>
+
+        <div class="modal-footer justify-content-between">
+          <button type="button" class="btn btn-primary" >
+            Disagree
+          </button>
+          <button type="button" class="btn btn-primary" (click)="agreeToTerms()">
+            Agree
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
