--- a/src/app/modules/resort-listing/resort-listing.component.scss
+++ b/src/app/modules/resort-listing/resort-listing.component.scss
@@ -92,3 +92,10 @@
   bottom: 0;
   z-index: 1000;
 }
+.sticky-sidebar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  overflow-y: auto;
+  
+}
