--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -3,7 +3,10 @@
     <div class="container my-5 py-5">
       <div class="row justify-content-between align-items-center">
         <div class="col-md-5">
-          <img src="assets/images/login-image-left.svg" alt="login-image-left">
+          <img
+            src="assets/images/login-image-left.svg"
+            alt="login-image-left"
+          />
         </div>
         <div class="col-md-5 mt-3 mt-md-0">
           <div class="card border-0">
@@ -12,44 +15,148 @@
                 <p class="card-title fs-5">Create your</p>
                 <h5 class="mb-4">Vanavihari user account</h5>
               </div>
-              <form [formGroup]="form" (ngSubmit)="onSubmit()">
+              <form #myForm="ngForm" [formGroup]="form" (ngSubmit)="onSubmit()">
                 <mat-form-field appearance="outline">
                   <mat-label>Full Name</mat-label>
-                  <input type="text" matInput required formControlName="full_name" placeholder="Enter full Name" />
+                  <input
+                    type="text"
+                    matInput
+                    required
+                    formControlName="full_name"
+                    name="Full_Name"
+                    ngModel
+                    placeholder="Enter Name"
+                  />
+                  <mat-error
+                    *ngIf="
+                      form.controls.full_name.invalid &&
+                      (form.controls.full_name.dirty ||
+                        form.controls.full_name.touched)
+                    "
+                  >
+                    Please enter your full name.
+                  </mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Mobile no.</mat-label>
-                  <input type="tel" matInput required formControlName="mobile_number" placeholder="Enter 10 digit mobile no." />
+                  <input
+                    type="tel"
+                    matInput
+                    required
+                    formControlName="mobile_number"
+                    name="Mobile_Number"
+                    ngModel
+                    placeholder="Enter 10 digit mobile no."
+                  />
+                  <mat-error
+                    *ngIf="
+                      form.controls.mobile_number.invalid &&
+                      (form.controls.mobile_number.dirty ||
+                        form.controls.mobile_number.touched)
+                    "
+                  >
+                    Please enter a valid mobile number.
+                  </mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Email</mat-label>
-                  <input type="email" matInput required formControlName="email_id" placeholder="abc@gmail.com" />
+                  <input
+                    type="email"
+                    matInput
+                    required
+                    formControlName="email_id"
+                    name="Email_Id"
+                    ngModel
+                    placeholder="abc@gmail.com"
+                  />
+                  <mat-error
+                    *ngIf="
+                      form.controls.email_id.invalid &&
+                      (form.controls.email_id.dirty ||
+                        form.controls.email_id.touched)
+                    "
+                  >
+                    Please enter a valid email address.
+                  </mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Password</mat-label>
-                  <input type="password" matInput name="Password" required formControlName="password" placeholder="Enter Password" />
+                  <input
+                    type="password"
+                    matInput
+                    name="Password"
+                    required
+                    formControlName="password"
+                    ngModel
+                    placeholder="Enter Password"
+                  />
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
+                  <mat-error
+                    *ngIf="
+                      form.controls.password.errors &&
+                      (form.controls.password.dirty ||
+                        form.controls.password.touched)
+                    "
+                  >
+                    <span *ngIf="form.controls.password.errors.required"
+                      >Password is required.</span
+                    >
+                    <span *ngIf="form.controls.password.errors.minlength"
+                      >Password must be at least 8 characters long.</span
+                    >
+                    <span *ngIf="form.controls.password.errors.pattern"
+                      >Password must contain at least one uppercase letter, one
+                      number, and one special character.</span
+                    >
+                  </mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Repeat Password</mat-label>
-                  <input type="password" matInput name="Repeat_Password" required formControlName="repeat_password" placeholder="Repeat Password" />
+                  <input
+                    type="password"
+                    matInput
+                    name="Repeat_Password"
+                    required
+                    formControlName="repeat_password"
+                    ngModel
+                    placeholder="Repeat Password"
+                  />
                   <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
                   <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
+                  <mat-error
+                    *ngIf="
+                      form.controls.repeat_password.errors &&
+                      (form.controls.repeat_password.dirty ||
+                        form.controls.repeat_password.touched)
+                    "
+                  >
+                    <span
+                      *ngIf="
+                        form.controls.repeat_password.errors.passwordsNotMatch
+                      "
+                      >Passwords do not match.</span
+                    >
+                  </mat-error>
                 </mat-form-field>
                 <!-- <mat-checkbox (change)="toggleTermsModal($event.checked)" value="" color="primary" class="my-2">I agree
                   to the terms and conditions</mat-checkbox> -->
                 <!-- Terms and Conditions Modal -->
-
-
-                <button mat-raised-button color="primary" class="w-100 mt-3">
+                <button
+                  mat-raised-button
+                  color="primary"
+                  class="w-100 mt-3"
+                  [disabled]="form.invalid"
+                >
                   Sign Up
                 </button>
-
               </form>
+
               <div class="d-flex justify-content-center mt-5">
                 <!-- <a class="text-danger">Reset fields</a> -->
-                <a class="text-info-emphasis" (click)="goToSignin()">Already have an account? Sign In</a>
+                <a class="text-info-emphasis" (click)="goToSignin()"
+                  >Already have an account? Sign In</a
+                >
               </div>
             </div>
           </div>
@@ -66,9 +173,16 @@
   [modalButtonColor]="modalButtonColor">
 </app-confirmation-modal> -->
 
-<div class="modal fade position-static" [ngClass]="{ show: showTermsModal }" tabindex="-1" role="dialog"
-aria-labelledby="modalTitleId" aria-hidden="true" data-bs-backdrop="false"
-  data-bs-keyboard="false">
+<div
+  class="modal fade position-static"
+  [ngClass]="{ show: showTermsModal }"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="modalTitleId"
+  aria-hidden="true"
+  data-bs-backdrop="false"
+  data-bs-keyboard="false"
+>
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
@@ -76,41 +190,78 @@ aria-labelledby="modalTitleId" aria-hidden="true" data-bs-backdrop="false"
       </div>
       <div class="modal-body">
         <!-- write terms and conditions in a list for signing up in a resort booking website -->
-        <p>By signing up on our resort booking website, you agree to comply with all the terms and conditions outlined
-          herein.</p>
+        <p>
+          By signing up on our resort booking website, you agree to comply with
+          all the terms and conditions outlined herein.
+        </p>
 
         <ol>
-          <li>You must be at least 18 years old to create an account on our platform.</li>
-          <li>You agree to provide accurate and up-to-date information during the registration process.</li>
-          <li>Your account credentials, including username and password, are confidential, and you are solely
-            responsible for maintaining their confidentiality.</li>
-          <li>Any activity conducted using your account is your responsibility, and you will be held liable for any
-            misuse or unauthorized access.</li>
-          <li>The resort booking website reserves the right to suspend or terminate your account at any time if it
-            suspects fraudulent activity or violation of these terms.</li>
-          <li>You agree not to use our platform for any unlawful or prohibited activities.</li>
-          <li>All bookings made through our website are subject to availability and confirmation by the resort.</li>
-          <li>Prices displayed on the website are subject to change without prior notice.</li>
-          <li>Payment for bookings must be made in accordance with the terms specified during the booking process.</li>
-          <li>Cancellation and refund policies vary depending on the resort and are subject to their terms and
-            conditions.</li>
-          <li>The resort booking website is not liable for any damages, losses, or inconveniences incurred during your
-            stay at the resort.</li>
-          <li>You agree to indemnify and hold harmless the resort booking website and its affiliates from any claims
-            arising out of your use of the platform.</li>
-          <li>We reserve the right to modify or update these terms and conditions at any time without prior notice.</li>
-          <li>By continuing to use our website after any modifications, you agree to be bound by the revised terms and
-            conditions.</li>
+          <li>
+            You must be at least 18 years old to create an account on our
+            platform.
+          </li>
+          <li>
+            You agree to provide accurate and up-to-date information during the
+            registration process.
+          </li>
+          <li>
+            Your account credentials, including username and password, are
+            confidential, and you are solely responsible for maintaining their
+            confidentiality.
+          </li>
+          <li>
+            Any activity conducted using your account is your responsibility,
+            and you will be held liable for any misuse or unauthorized access.
+          </li>
+          <li>
+            The resort booking website reserves the right to suspend or
+            terminate your account at any time if it suspects fraudulent
+            activity or violation of these terms.
+          </li>
+          <li>
+            You agree not to use our platform for any unlawful or prohibited
+            activities.
+          </li>
+          <li>
+            All bookings made through our website are subject to availability
+            and confirmation by the resort.
+          </li>
+          <li>
+            Prices displayed on the website are subject to change without prior
+            notice.
+          </li>
+          <li>
+            Payment for bookings must be made in accordance with the terms
+            specified during the booking process.
+          </li>
+          <li>
+            Cancellation and refund policies vary depending on the resort and
+            are subject to their terms and conditions.
+          </li>
+          <li>
+            The resort booking website is not liable for any damages, losses, or
+            inconveniences incurred during your stay at the resort.
+          </li>
+          <li>
+            You agree to indemnify and hold harmless the resort booking website
+            and its affiliates from any claims arising out of your use of the
+            platform.
+          </li>
+          <li>
+            We reserve the right to modify or update these terms and conditions
+            at any time without prior notice.
+          </li>
+          <li>
+            By continuing to use our website after any modifications, you agree
+            to be bound by the revised terms and conditions.
+          </li>
         </ol>
 
         <div class="modal-footer justify-content-between">
-          <button type="button" class="btn btn-primary" >
-            Disagree
-          </button>
-          <button type="button" class="btn btn-primary">
-            Agree
-          </button>
+          <button type="button" class="btn btn-primary">Disagree</button>
+          <button type="button" class="btn btn-primary">Agree</button>
         </div>
       </div>
     </div>
   </div>
+</div>
