--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -11,8 +11,8 @@
                     </div>
                     <form [formGroup]="form" (ngSubmit)="onSubmit()">
                       <mat-form-field appearance="outline">
-                        <mat-label>Mobile no.</mat-label>
-                        <input type="tel" formControlName="mobile_number" matInput required placeholder="Enter 10 digit mobile no.">
+                        <mat-label>Email Address.</mat-label>
+                        <input type="email" formControlName="email_address" matInput required placeholder="Enter Email">
                       </mat-form-field>
                       <mat-form-field appearance="outline" class="mt-3">
                         <mat-label>Password</mat-label>
