--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -16,23 +16,21 @@
                 <mat-form-field appearance="outline">
                   <mat-label>Full Name</mat-label>
                   <input type="text" matInput required formControlName="full_name" name="Full_Name" ngModel placeholder="Enter full name" />
-                  <mat-error *ngIf="form.get('full_name')?.invalid && (form.get('full_name')?.dirty || form.get('full_name')?.touched)"> Please enter your full name.</mat-error>
+                  <mat-error *ngIf="form.get('full_name')?.invalid && (form.get('full_name')?.dirty || form.get('full_name')?.touched)">Enter full name</mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Mobile no.</mat-label>
-                  <input type="tel" matInput required formControlName="mobile_number" name="Mobile_Number" ngModel placeholder="Enter 10 digit mobile no." />
-                  <mat-error *ngIf="form.get('mobile_number')?.invalid && (form.get('mobile_number')?.dirty || form.get('mobile_number')?.touched)"> Please enter the valid Mobile Number. </mat-error>
+                  <input type="tel" maxlength="10" minlength="10" matInput required formControlName="mobile_number" name="Mobile_Number" ngModel placeholder="Enter 10 digit mobile no." />
+                  <mat-error *ngIf="form.get('mobile_number')?.invalid && (form.get('mobile_number')?.dirty || form.get('mobile_number')?.touched)"> Enter 10 digit mobile no.. </mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Email</mat-label>
                   <input type="email" matInput required formControlName="email_id" name="Email_Id" ngModel placeholder="abc@gmail.com" />
-                  <mat-error *ngIf="form.controls.email_id.invalid && (form.controls.email_id.dirty || form.controls.email_id.touched)">Please enter a valid email address.</mat-error>
+                  <mat-error *ngIf="form.controls.email_id.invalid && (form.controls.email_id.dirty || form.controls.email_id.touched)">E0000000000000000000nter a valid email address.</mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="mt-3">
                   <mat-label>Password</mat-label>
                   <input type="password" matInput name="Password" required formControlName="password" ngModel placeholder="Enter Password" />
-                  <!-- <mat-hint><strong>Your data is safe with us</strong> </mat-hint> -->
-                  <!-- <mat-hint>{{message.value.length}} / 256</mat-hint> -->
                   <mat-error *ngIf="form.controls.password.errors && (form.controls.password.dirty ||form.controls.password.touched) ">
                     <span *ngIf="form.controls.password.errors.required">Password is required.</span>
                     <span *ngIf="form.controls.password.errors.minlength">Password must be at least 8 characters long.</span>
