--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -46,9 +46,8 @@
                     <span *ngIf="form.controls.repeat_password.errors.passwordsNotMatch">Passwords do not match.</span>
                   </mat-error>
                 </mat-form-field>
-                <!-- <mat-checkbox (change)="toggleTermsModal($event.checked)" value="" color="primary" class="my-2">I agree
-                  to the terms and conditions</mat-checkbox> -->
-                <!-- Terms and Conditions Modal -->
+                  <!-- <mat-checkbox (click)="openTermsModal()" [(ngModel)]="termsAccepted" value="" color="primary" class="my-2">I agree to the terms and conditions</mat-checkbox>
+                   Terms and Conditions Modal -->
                 <button mat-raised-button color="primary" class="w-100 mt-3">Sign Up</button>
               </form>
 
